fixed links not wrapping

--- a/client/src/components/Authenticate/LoginForm.css
+++ b/client/src/components/Authenticate/LoginForm.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 920px) {
   #login-auth-links-wrapper {
     width: 90vw;
     font-size: 15px;
